# diffsol-js

./: .gitignore  .npmignore  Cargo.toml  LICENSE  LICENSE_MIT  README.md  build.js  fix-docs-paths.js  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  typedoc.json
.github/workflows/: ci.yml
doc/: getting_started.md  interactive_solver.md  overview.md  overview_api.md
src/: bindings.rs  compile.ts  create_bindings.rs  error.ts  index.ts  initial-condition-options.ts  interactive-solver.css  interactive-solver.ts  lib.rs  linear-solver-type.ts  matrix-type.ts  mem-utils.ts  ode-options.ts  ode-solver-type.ts  ode.ts  prism-code-editor.d.ts  scalar-type.ts  solution.ts  wasm.d.ts
src/test/: interactive-solver.test.ts  ode-options.test.ts  ode.test.ts  setup.ts  solution.test.ts  test-config.ts
src/test/__mocks__/: plotly.js.js  prism-code-editor-css.js  prism-code-editor-lang.js  prism-code-editor.js  wasm.js
src/test/__mocks__/prism-code-editor/: setups.js
wasm/: diffsol_c.wasm
