[package]
name = "diffsol-js"
version = "0.1.0"
authors = ["martinjrobins <martinjrobins@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.95"
nalgebra = "0.33.2"
diffsol = { path = "../diffsol", version = "0.3.0", features = ["diffsl-cranelift"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
const_format = "0.2.33"
js-sys = "0.3.72"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
